--- a/HeThongHoTroCuocThi/src/main/resources/templates/User/register.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/User/register.html
@@ -18,8 +18,8 @@
                     <h3>Sign up to <strong>Bookstore</strong></h3>
                     <p class="mb-4 text-secondary">Welcome to
                         Bookstore, please sign up to continue.</p>
-                    <form th:action="@{/register}" method="post">
-                        <div th:if="${errors}" class="alert alertdanger justify-content-center" role="alert">
+                    <form th:action="@{/register}" th:object="${user}" method="post" enctype="multipart/form-data">
+                        <div th:if="${errors}" class="alert alert danger justify-content-center" role="alert">
                             <ul>
                                 <li th:each="error : ${errors}"
                                     th:text="${error}" class="text-danger text-start"></li>
@@ -28,28 +28,40 @@
                         <div class="form-group mb-4">
                             <label for="email"></label>
                             <input type="email" class="form-control"
-                                   required id="email" name="email" placeholder="Enter your email">
+                                   required id="email" th:field="*{email}" placeholder="Enter your email">
                         </div>
                         <div class="form-group mb-4">
                             <label for="username"></label>
                             <input type="text" class="form-control"
-                                   required id="username" name="username" placeholder="Enter your username">
+                                   required id="username" th:field="*{username}" placeholder="Enter your username">
                         </div>
                         <div class="form-group mb-4">
                             <label for="password"></label>
                             <input type="password" class="form-control"
-                                   required id="password" name="password" placeholder="Enter your password">
+                                   required id="password" th:field="*{password}" placeholder="Enter your password">
                         </div>
                         <div class="form-group mb-4">
                             <label for="phone"></label>
                             <input type="tel" class="form-control"
-                                   required id="phone" name="phone" placeholder="Enter your phone">
+                                   required id="phone" th:field="*{phone}" placeholder="Enter your phone">
+                        </div>
+                            <div class="form-group mb-4">
+                                <label for="imageUrl"></label>
+                                <input type="file" class="form-control"
+                                       required id="imageUrl" th:field="*{imageUrl}" placeholder="Enter your image">
+                            </div>
+                        <div class="form-group mb-4">
+                            <label for="truong"></label>
+                            <select class="form-control" id="truong" th:field="*{truong}">
+                                <option value="">-- Chose school --</option>
+                                <option th:each="t : ${listTruong}" th:value="${t.id}"
+                                        th:text="${t.tenTruong}"></option>
+                            </select>
                         </div>
                         <div class="d-grid gap-2 form-action">
                             <button type="submit" class="btn btnprimary btn-lg btn-block">Sign up</button>
                             <p class="mt-3 mb-0">Already have an
-                                account? <a class="text-info text-center" th:href="${'/login'}">Login
-                                    in?</a></p>
+                                account? <a class="text-info text-center" th:href="${'/login'}">Login in?</a></p>
                         </div>
                     </form>
                 </div>
