--- a/HeThongHoTroCuocThi/src/main/resources/templates/Home/index.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/Home/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initialscale=1.0">
-    <title>ỨNG DỤNG QUẢN LÝ SÁCH</title>
+    <title>ỨNG DỤNG HỖ TRỢ CUỘC THI</title>
     <th:block th:replace="~{layout::link-css}"></th:block>
     <th:block th:replace="~{layout::custom-css}"></th:block>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
 <th:block th:replace="~{layout::header}"></th:block>
-<div class="container">
+<div class="container my-5">
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
