--- a/HeThongHoTroCuocThi/src/main/resources/templates/CuocThi/list.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/CuocThi/list.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      lang="en">
 <head>
-    <title>List of LoaiTruong</title>
-    <!-- Thêm các liên kết Bootstrap -->
+    <title>DANH SÁCH CUỘC THI</title>
+    <th:block th:replace="~{layout::link-css}"></th:block>
+    <th:block th:replace="~{layout::custom-css}"></th:block>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
 <th:block th:replace="~{layout::header}"></th:block>
-<div class="container">
-    <h1 class="my-4">List of LoaiTruong</h1>
-    <a class="btn btn-success" th:href="@{/CuocThis/add}">Create Cuocthi</a>
+<div class="container my-5">
+    <div class="d-flex justify-content-between align-items-center mb-3">
+        <h1 class="my-4">DANH SÁCH CUỘC THI</h1>
+        <a class="btn btn-success mb-4" sec:authorize="hasAnyAuthority('ADMIN')" th:href="@{/CuocThis/add}">Tạo mới</a>
+    </div>
     <table class="table table-striped table-hover">
         <thead>
         <tr>
-            <th>ID</th>
+            <th>Mã</th>
             <th>Tên cuộc thi</th>
             <th>Ngày thi</th>
             <th>Số lượng</th>
             <th>Địa điểm</th>
             <th>Môn thi</th>
-            <th>Actions</th>
+            <th>Thao tác</th>
         </tr>
         </thead>
         <tbody>
@@ -31,19 +36,17 @@
             <td th:text="${cuocThi.diaDiemThi}"></td>
             <td th:text="${cuocThi.monThi.tenMonThi}"></td>
             <td>
-                <a class="btn btn-primary btn-sm" th:href="@{/CuocThis/edit/{id}(id=${cuocThi.id})}">Edit</a>
-                <a class="btn btn-danger btn-sm" th:href="@{/CuocThis/AnHien/{id}(id=${cuocThi.id})}" th:text="${cuocThi.trangThai == 1 ? 'Hiện' : 'Ẩn'}"></a>
+                <a sec:authorize="hasAnyAuthority('ADMIN')" class="btn btn-primary btn-sm"
+                   th:href="@{/CuocThis/edit/{id}(id=${cuocThi.id})}">Sửa</a>
+                <a sec:authorize="hasAnyAuthority('ADMIN')" class="btn btn-danger btn-sm"
+                   th:href="@{/CuocThis/AnHien/{id}(id=${cuocThi.id})}"
+                   th:text="${cuocThi.trangThai == 1 ? 'Hiện' : 'Ẩn'}"></a>
                 <a class="btn btn-primary btn-sm" th:href="@{/PhieuDangKys/add/id/{id}(id=${cuocThi.id})}">Đăng ký</a>
             </td>
         </tr>
         </tbody>
     </table>
-
 </div>
-
-<!-- Thêm các tập lệnh Bootstrap -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<th:block th:replace="~{layout::footer}"></th:block>
 </body>
 </html>
