--- a/HeThongHoTroCuocThi/src/main/resources/templates/MonThi/add.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/MonThi/add.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Add LoaiTruong</title>
+    <title>THÊM MÔN THI</title>
+    <th:block th:replace="~{layout::link-css}"></th:block>
+    <th:block th:replace="~{layout::custom-css}"></th:block>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
 <th:block th:replace="~{layout::header}"></th:block>
 <div class="container">
-    <h1 class="my-4">Add LoaiTruong</h1>
+    <h1 class="my-4">THÊM MÔN THI</h1>
 
     <form th:action="@{/MonThis/add}" th:object="${monThis}" method="post">
         <div class="form-group">
-            <label for="tenMonThi">Tên Loại Trường</label>
+            <label for="tenMonThi">Tên môn thi</label>
             <input type="text" class="form-control" id="tenMonThi" th:field="*{tenMonThi}" required>
         </div>
-        <button type="submit" class="btn btn-primary">Save</button>
-        <a th:href="@{/MonThis}" class="btn btn-secondary">Cancel</a>
+        <button type="submit" class="btn btn-primary">Tạo</button>
+        <a th:href="@{/MonThis}" class="btn btn-secondary">Trở về</a>
     </form>
 </div>
-
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<th:block th:replace="~{layout::footer}"></th:block>
 </body>
 </html>
