--- a/HeThongHoTroCuocThi/src/main/resources/templates/MonThi/edit.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/MonThi/edit.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Edit Loại Trường</title>
+    <title>SỬA MÔN THI</title>
+    <th:block th:replace="~{layout::link-css}"></th:block>
+    <th:block th:replace="~{layout::custom-css}"></th:block>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
 <th:block th:replace="~{layout::header}"></th:block>
 <div class="container mt-5">
-    <h1>Edit Loại Trường</h1>
+    <h1>SỬA MÔN THI</h1>
     <div th:if="${success}" class="alert alert-success" role="alert" th:text="${success}"></div>
     <div th:if="${error}" class="alert alert-danger" role="alert" th:text="${error}"></div>
 
     <form th:action="@{/MonThis/edit}" method="post" th:object="${monThi}">
         <input type="hidden" th:field="*{id}">
         <div class="form-group">
-            <label for="tenMonThi">Tên Loại Trường</label>
+            <label for="tenMonThi">Tên môn thi</label>
             <input type="text" class="form-control" id="tenMonThi" th:field="*{tenMonThi}" required>
         </div>
-        <button type="submit" class="btn btn-primary">Lưu Thay Đổi</button>
-        <a th:href="@{/MonThis}" class="btn btn-secondary">Hủy</a>
+        <button type="submit" class="btn btn-primary">Lưu</button>
+        <a th:href="@{/MonThis}" class="btn btn-secondary">Trở về</a>
     </form>
 </div>
+<th:block th:replace="~{layout::footer}"></th:block>
 </body>
 </html>
