--- a/HeThongHoTroCuocThi/src/main/resources/templates/MonThi/list.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/MonThi/list.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>List of LoaiTruong</title>
-    <!-- Thêm các liên kết Bootstrap -->
+    <title>Danh Sách Môn Thi</title>
+    <th:block th:replace="~{layout::link-css}"></th:block>
+    <th:block th:replace="~{layout::custom-css}"></th:block>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
 <th:block th:replace="~{layout::header}"></th:block>
-<div class="container">
-    <h1 class="my-4">List of LoaiTruong</h1>
-    <a class="btn btn-success" th:href="@{/MonThis/add}">Create MonThi</a>
+<div class="container my-5">
+    <div class="d-flex justify-content-between align-items-center mb-3">
+        <h1 class="my-4">Danh Sách Môn Thi</h1>
+        <a class="btn btn-success mb-4" th:href="@{/MonThis/add}">Tạo mới</a>
+    </div>
     <table class="table table-striped table-hover">
         <thead>
         <tr>
-            <th>ID</th>
-            <th>Tên môn thi</th>
-            <th>Actions</th>
+            <th>Mã</th>
+            <th>Tên Môn Thi</th>
+            <th>Thao tác</th>
         </tr>
         </thead>
         <tbody>
@@ -23,19 +26,14 @@
             <td th:text="${monThi.id}"></td>
             <td th:text="${monThi.tenMonThi}"></td>
             <td>
-                <a class="btn btn-primary btn-sm" th:href="@{/MonThis/edit/{id}(id=${monThi.id})}">Edit</a>
+                <a class="btn btn-primary btn-sm" th:href="@{/MonThis/edit/{id}(id=${monThi.id})}">Sửa</a>
                 <a class="btn btn-danger btn-sm" th:href="@{/MonThis/AnHien/{id}(id=${monThi.id})}"
-                   th:text="${monThi.trangThai == 1 ? 'Hiện' : 'Ẩn'}"></a>
+                   th:text="${monThi.trangThai == 1 ? 'Ẩn' : 'Hiện'}"></a>
             </td>
         </tr>
         </tbody>
     </table>
-
 </div>
-
-<!-- Thêm các tập lệnh Bootstrap -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<th:block th:replace="~{layout::footer}"></th:block>
 </body>
 </html>
