--- a/HeThongHoTroCuocThi/src/main/resources/templates/Truong/add.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/Truong/add.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Add LoaiTruong</title>
+    <title>THÊM TRƯỜNG</title>
+    <th:block th:replace="~{layout::link-css}"></th:block>
+    <th:block th:replace="~{layout::custom-css}"></th:block>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
 <th:block th:replace="~{layout::header}"></th:block>
 <div class="container">
-    <h1 class="my-4">Add Truong</h1>
+    <h1 class="my-4">THÊM TRƯỜNG</h1>
 
     <form th:action="@{/Truongs/add}" th:object="${truong}" method="post">
         <div class="form-group">
@@ -15,20 +17,16 @@
             <input type="text" class="form-control" id="tenTruong" th:field="*{tenTruong}" required>
         </div>
         <div class="form-group mb-4">
-            <label for="truong"></label>
+            <label for="truong">Loại trường</label>
             <select class="form-control" id="truong" th:field="*{loaiTruong}">
-                <option value="">-- Chose school --</option>
+                <option value="">-- chọn loại trường --</option>
                 <option th:each="loaiTruong : ${listLoaiTruong}" th:value="${loaiTruong.id}"
                         th:text="${loaiTruong.tenLoaiTruong}"></option>
             </select>
         </div>
-        <button type="submit" class="btn btn-primary">Save</button>
-        <a th:href="@{/Truongs}" class="btn btn-secondary">Cancel</a>
+        <button type="submit" class="btn btn-primary">Tạo</button>
+        <a th:href="@{/Truongs}" class="btn btn-secondary">Trở về</a>
     </form>
 </div>
-
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
