--- a/HeThongHoTroCuocThi/src/main/resources/templates/Truong/list.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/Truong/list.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>List of LoaiTruong</title>
-    <!-- Thêm các liên kết Bootstrap -->
+    <title>DANH SÁCH TRƯỜNG</title>
+    <th:block th:replace="~{layout::link-css}"></th:block>
+    <th:block th:replace="~{layout::custom-css}"></th:block>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
 <th:block th:replace="~{layout::header}"></th:block>
-<div class="container">
-    <h1 class="my-4">List of Truong</h1>
-    <a class="btn btn-success" th:href="@{/Truongs/add}">Create Truong</a>
+<div class="container my-5">
+    <div class="d-flex justify-content-between align-items-center mb-3">
+        <h1 class="my-4">DANH SÁCH TRƯỜNG</h1>
+        <a class="btn btn-success mb-4" th:href="@{/Truongs/add}">Tạo mới</a>
+    </div>
     <table class="table table-striped table-hover">
         <thead>
         <tr>
-            <th>ID</th>
+            <th>Mã</th>
             <th>Tên trường</th>
             <th>Loại trường</th>
-            <th>Action</th>
+            <th>Thao tác</th>
         </tr>
         </thead>
         <tbody>
@@ -25,18 +28,14 @@
             <td th:text="${truong.tenTruong}"></td>
             <td th:text="${truong.loaiTruong.tenLoaiTruong}"></td>
             <td>
-                <a class="btn btn-primary btn-sm" th:href="@{/Truongs/edit/{id}(id=${truong.id})}">Edit</a>
+                <a class="btn btn-primary btn-sm" th:href="@{/Truongs/edit/{id}(id=${truong.id})}">Sửa</a>
                 <a class="btn btn-danger btn-sm" th:href="@{/Truongs/AnHien/{id}(id=${truong.id})}"
-                   th:text="${truong.trangThai == 1 ? 'Hiện' : 'Ẩn'}"></a>
+                   th:text="${truong.trangThai == 1 ? 'Ẩn' : 'Hiện'}"></a>
             </td>
         </tr>
         </tbody>
     </table>
 </div>
 <th:block th:replace="~{layout::footer}"></th:block>
-<!-- Thêm các tập lệnh Bootstrap -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
