--- a/HeThongHoTroCuocThi/src/main/resources/templates/MonThi/list.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/MonThi/list.html
@@ -28,7 +28,7 @@
             <td>
                 <a class="btn btn-primary btn-sm" th:href="@{/MonThis/edit/{id}(id=${monThi.id})}">Sửa</a>
                 <a class="btn btn-danger btn-sm" th:href="@{/MonThis/AnHien/{id}(id=${monThi.id})}"
-                   th:text="${monThi.trangThai == 1 ? 'Ẩn' : 'Hiện'}"></a>
+                   th:text="${monThi.trangThai == 1 ? 'Hiện' : 'Ẩn'}"></a>
             </td>
         </tr>
         </tbody>
