--- a/HeThongHoTroCuocThi/src/main/resources/templates/PhieuDangKy/add.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/PhieuDangKy/add.html
@@ -57,8 +57,8 @@
                     </div>
                     <h2 class="mb-4">XÁC NHẬN THÔNG TIN</h2>
                     <div class="form-group">
-                        <label for="username" class="form-label">Username</label>
-                        <input type="text" class="form-control" id="username" required readonly>
+                        <label for="hoten" class="form-label">Họ và tên</label>
+                        <input type="text" class="form-control" id="hoten" required readonly>
                     </div>
                     <div class="form-group">
                         <img id="imageUrl" src="#" alt="User Image" style="max-width: 200px; display: none;">
@@ -92,6 +92,6 @@
     </div>
 </div>
 <th:block th:replace="~{layout::footer}"></th:block>
-<script th:src="@{/js/PhieuDangKy.js}"></script>
+<script th:src="@{/js/TaoPhieuDangKy.js}"></script>
 </body>
 </html>
