--- a/HeThongHoTroCuocThi/src/main/resources/templates/CuocThi/add.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/CuocThi/add.html
@@ -40,6 +40,14 @@
                 </select>
             </div>
             <div class="form-group">
+                <label for="LoaiTruongId">Cấp thi</label>
+                <select class="form-control" id="LoaiTruongId" th:field="*{LoaiTruongId}">
+                    <option value="">-- chọn cấp thi --</option>
+                    <option th:each="loaiTruong : ${listLoaiTruong}" th:value="${loaiTruong.id}"
+                            th:text="${loaiTruong.tenLoaiTruong}"></option>
+                </select>
+            </div>
+            <div class="form-group">
                 <button type="button" onclick="nextStep(2)" class="btn btn-primary custom-btn">Tiếp tục</button>
             </div>
         </div>
