--- a/HeThongHoTroCuocThi/src/main/resources/templates/CuocThi/edit.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/CuocThi/edit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>TẠO CUỘC THI</title>
+    <title>SỬA CUỘC THI</title>
     <th:block th:replace="~{layout::link-css}"></th:block>
     <th:block th:replace="~{layout::custom-css}"></th:block>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -9,9 +9,10 @@
 <body>
 <th:block th:replace="~{layout::header}"></th:block>
 <div class="container">
-    <h1 class="my-4">TẠO CUỘC THI</h1>
-    <form th:action="@{/CuocThis/add}" th:object="${cuocThi}" method="post">
+    <h1 class="my-4">SỬA CUỘC THI</h1>
+    <form th:action="@{/CuocThis/edit}" th:object="${cuocThi}" method="post">
         <div id="step-1" class="step-container active">
+            <input type="hidden" th:field="*{id}" required>
             <div class="form-group">
                 <label for="tenCuocThi">Tên cuộc thi</label>
                 <input type="text" class="form-control" id="tenCuocThi" th:field="*{tenCuocThi}" required>
@@ -53,40 +54,46 @@
         </div>
         <div id="step-2" class="step-container" style="display: none;">
             <div class="form-group">
-                <label class="control-label">Chọn quy định</label>
+                <h3><label class="control-label">Chọn quy định</label></h3>
                 <div class="checkbox-list">
                     <div th:each="quyDinh : ${allQuyDinhs}" class="checkbox-item">
                         <input type="checkbox" id="'quyDinh' + ${quyDinh.id}" name="selectedQuyDinhs"
-                               class="pointer-cursor"
-                               th:value="${quyDinh.id}"/>
+                               class="pointer-cursor" th:value="${quyDinh.id}"
+                               th:checked="${chiTietQuyDinhs.contains(quyDinh)}"/>
                         <label th:for="'quyDinh' + ${quyDinh.id}" th:text="${quyDinh.tenQuyDinh}"></label>
                     </div>
                 </div>
             </div>
             <div class="form-group">
-                <button type="button" onclick="nextStep(1)" class="btn btn-primary custom-btn custom-btn-left">Quay
-                    lại
+                <div th:if="${errorMessageQuyDinh != null}" class="alert alert-danger" th:text="${errorMessageQuyDinh}" style="margin-top: 20px; margin-bottom: 20px;"></div>
+            </div>
+            <div class="form-group">
+                <button type="button" onclick="nextStep(1)" class="btn btn-primary custom-btn custom-btn-left">
+                    Quay lại
                 </button>
-                <button type="button" onclick="nextStep(3)" class="btn btn-primary custom-btn custom-btn-right">Tiếp
-                    tục
+                <button type="button" onclick="nextStep(3)" class="btn btn-primary custom-btn custom-btn-right">
+                    Tiếp tục
                 </button>
             </div>
         </div>
         <div id="step-3" class="step-container" style="display: none;">
             <div class="form-group">
-                <label class="control-label">Chọn nội dung</label>
+                <h3><label class="control-label">Chọn nội dung</label></h3>
                 <div class="checkbox-list">
                     <div th:each="noiDung : ${allNoiDungs}" class="checkbox-item">
                         <input type="checkbox" id="'noiDung' + ${noiDung.id}" name="selectedNoiDungs"
-                               class="pointer-cursor"
-                               th:value="${noiDung.id}"/>
+                               class="pointer-cursor" th:value="${noiDung.id}"
+                               th:checked="${chiTietNoiDungs.contains(noiDung)}"/>
                         <label th:for="'noiDung' + ${noiDung.id}" th:text="${noiDung.tenNoiDung}"></label>
                     </div>
                 </div>
             </div>
             <div class="form-group">
+                <div th:if="${errorMessageNoiDung != null}" class="alert alert-danger" th:text="${errorMessageNoiDung}" style="margin-top: 20px; margin-bottom: 20px;"></div>
+            </div>
+            <div class="form-group">
                 <button type="button" onclick="nextStep(2)" class="btn btn-primary custom-btn">Quay lại</button>
-                <input type="submit" value="Tạo cuộc thi" class="btn btn-primary"/>
+                <input type="submit" value="Lưu" class="btn btn-primary"/>
             </div>
         </div>
     </form>
