Đã có CRUD nội dung

--- a/HeThongHoTroCuocThi/src/main/resources/templates/layout.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/layout.html
@@ -63,6 +63,11 @@
                         </a>
                     </li>
                     <li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN')">
+                        <a class="nav-link" href="/NoiDungs">
+                            Nội dung
+                        </a>
+                    </li>
+                    <li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN')">
                         <a class="nav-link" href="/CuocThis">
                             Cuộc thi
                         </a>
