--- a/HeThongHoTroCuocThi/src/main/resources/templates/PhieuDangKy/list.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/PhieuDangKy/list.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      lang="en">
 <head>
     <title>DANH SÁCH PHIẾU ĐĂNG KÝ</title>
     <th:block th:replace="~{layout::link-css}"></th:block>
@@ -15,20 +17,28 @@
     <table class="table table-striped table-hover">
         <thead>
         <tr>
-            <th>Mã</th>
+            <th>Mã phiếu</th>
             <th>Cuộc thi</th>
-            <th>Ngày thi</th>
             <th>Họ và tên</th>
-            <th>Địa điểm thi</th>
+            <th>Email</th>
+            <th>SDT</th>
+            <th>Trường</th>
+            <th>Điểm</th>
             <th>Thao tác</th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="phieuDangKy : ${phieuDangKys}">
             <td th:text="${phieuDangKy.id}"></td>
-            <td th:text="${userService.findById(phieuDangKy.user.getId()).getCccd()}"></td>
-            <td th:text="${userService.findById(phieuDangKy.user.getId()).getHoten()}"></td>
-            <td></td>
+            <td th:text="${phieuDangKy.cuocThi.getTenCuocThi()}"></td>
+            <td th:text="${phieuDangKy.user.getHoten()}"></td>
+            <td th:text="${phieuDangKy.user.getEmail()}"></td>
+            <td th:text="${phieuDangKy.user.getPhone()}"></td>
+            <td th:text="${phieuDangKy.user.getTruong().getTenTruong()}"></td>
+            <td th:text="${phieuKetQuaService.getDiemByCuocThiIdvaUserId(phieuDangKy.cuocThi.id, phieuDangKy.user.id)}"></td>
+            <td>
+                <a sec:authorize="hasAnyAuthority('ADMIN')" class="btn btn-primary btn-dangky" th:href="@{/PhieuKetQuas/add/pdkId/{id}(id=${phieuDangKy.id})}">Nhập điểm</a>
+            </td>
         </tr>
         </tbody>
     </table>
