da hoan thien quy dinh, noi dung, con phan hien anh

--- a/HeThongHoTroCuocThi/src/main/resources/templates/layout.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/layout.html
@@ -68,6 +68,11 @@
                         </a>
                     </li>
                     <li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN')">
+                        <a class="nav-link" href="/QuyDinhs">
+                            Quy Định
+                        </a>
+                    </li>
+                    <li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN')">
                         <a class="nav-link" href="/CuocThis">
                             Cuộc thi
                         </a>
