--- a/HeThongHoTroCuocThi/src/main/resources/templates/PhieuKetQua/edit.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/PhieuKetQua/edit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>NHẬP ĐIỂM</title>
+    <title>SỬA ĐIỂM</title>
     <th:block th:replace="~{layout::link-css}"></th:block>
     <th:block th:replace="~{layout::custom-css}"></th:block>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -15,7 +15,7 @@
                 <div class="card-body form-XacNhan">
                     <div class="card-header">
                         <h4 class="mb-0">Xác nhận thông tin</h4>
-                        <p>Xác nhận đúng thông tin thí sinh trước khi nhập điểm.</p>
+                        <p>Xác nhận đúng thông tin thí sinh trước khi sửa điểm.</p>
                     </div>
                     <!--Xác nhận thông tin bằng cccd-->
                     <div class="form-group">
@@ -62,7 +62,8 @@
                     <div class="card-header">
                         <h4 class="mb-0">Nhập điểm</h4>
                     </div>
-                    <form th:action="@{/PhieuKetQuas/add}" th:object="${phieuKetQua}" method="post">
+                    <form th:action="@{/PhieuKetQuas/edit}" th:object="${phieuKetQua}" method="post">
+                        <input type="hidden" th:field="*{id}">
                         <div class="form-group">
                             <label for="phieuDangKy">Phiếu đăng ký</label>
                             <input type="text" class="form-control" id="phieuDangKy" th:field="*{phieuDangKy}" required readonly>
@@ -80,7 +81,7 @@
                             <label for="phut">Điểm</label>
                             <input type="text" class="form-control" id="diem" th:field="*{diem}" required>
                         </div>
-                        <button type="submit" class="btn btn-primary">Nhập điểm</button>
+                        <button type="submit" class="btn btn-primary">Sửa điểm</button>
                     </form>
                 </div>
             </div>
