--- a/HeThongHoTroCuocThi/src/main/resources/templates/CuocThi/details.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/CuocThi/details.html
@@ -110,62 +110,6 @@
 <th:block th:replace="~{layout::footer}"></th:block>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
-<script>
-    $(document).ready(function () {
-        var currentQuyDinhPage = 0;
-        var quyDinhPages = $(".listQuyDinh");
-        var totalQuyDinhPages = quyDinhPages.length;
-
-        function showQuyDinhPage(index) {
-            quyDinhPages.hide();
-            quyDinhPages.eq(index).show();
-        }
-
-        $("#prevBtnQuyDinh").click(function () {
-            currentQuyDinhPage = (currentQuyDinhPage > 0) ? currentQuyDinhPage - 1 : totalQuyDinhPages - 1;
-            showQuyDinhPage(currentQuyDinhPage);
-        });
-
-        $("#nextBtnQuyDinh").click(function () {
-            currentQuyDinhPage = (currentQuyDinhPage < totalQuyDinhPages - 1) ? currentQuyDinhPage + 1 : 0;
-            showQuyDinhPage(currentQuyDinhPage);
-        });
-
-        showQuyDinhPage(currentQuyDinhPage);
-
-        var currentNoiDungPage = 0;
-        var noiDungPages = $(".listNoiDung");
-        var totalNoiDungPages = noiDungPages.length;
-
-        function showNoiDungPage(index) {
-            noiDungPages.hide();
-            noiDungPages.eq(index).show();
-        }
-
-        $("#prevBtnNoiDung").click(function () {
-            currentNoiDungPage = (currentNoiDungPage > 0) ? currentNoiDungPage - 1 : totalNoiDungPages - 1;
-            showNoiDungPage(currentNoiDungPage);
-        });
-
-        $("#nextBtnNoiDung").click(function () {
-            currentNoiDungPage = (currentNoiDungPage < totalNoiDungPages - 1) ? currentNoiDungPage + 1 : 0;
-            showNoiDungPage(currentNoiDungPage);
-        });
-
-        showNoiDungPage(currentNoiDungPage);
-
-        $("#showQuyDinhBtn").click(function () {
-            $("#quyDinhContainer").show();
-            $("#noiDungContainer").hide();
-            showQuyDinhPage(currentQuyDinhPage);
-        });
-
-        $("#showNoiDungBtn").click(function () {
-            $("#noiDungContainer").show();
-            $("#quyDinhContainer").hide();
-            showNoiDungPage(currentNoiDungPage);
-        });
-    });
-</script>
+<script th:src="@{/js/DetailsCuocThi.js}"></script>
 </body>
 </html>
