--- a/HeThongHoTroCuocThi/src/main/resources/templates/layout.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/layout.html
@@ -63,6 +63,11 @@
                         </a>
                     </li>
                     <li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN')">
+                        <a class="nav-link" href="/QuyDinhs">
+                            Quy định
+                        </a>
+                    </li>
+                    <li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN')">
                         <a class="nav-link" href="/NoiDungs">
                             Nội dung
                         </a>
@@ -105,13 +110,6 @@
     </nav>
 </header>
 <div class="container my-5">
-    <div class="jumbotron">
-        <h1 class="display-4">Welcome to MOS!</h1>
-        <p class="lead">Streamline your academic journey with our powerful management system.</p>
-        <hr class="my-4">
-        <p>Explore our features and discover how MOS can elevate your educational experience.</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn More</a>
-    </div>
     <div th:fragment="content"></div>
 </div>
 <footer th:fragment="footer" class="footer mt-auto py-3 bg-dark text-white">
