da xong phan thong ke, chua xong phan saveUpdateUser

--- a/HeThongHoTroCuocThi/src/main/resources/templates/PhieuKetQua/list.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/PhieuKetQua/list.html
@@ -8,6 +8,12 @@
     <th:block th:replace="~{layout::custom-css}"></th:block>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
+<style>
+    canvas {
+        width: 500px;
+        height: 500px;
+    }
+</style>
 <body>
 <th:block th:replace="~{layout::header}"></th:block>
 <div class="container my-5">
