--- a/HeThongHoTroCuocThi/src/main/resources/templates/PhieuDangKy/list.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/PhieuDangKy/list.html
@@ -14,6 +14,8 @@
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h1 class="my-4">DANH SÁCH PHIẾU ĐĂNG KÝ</h1>
         <a class="btn btn-success mb-4" th:href="@{/PhieuKetQuas/cuocThiId/{id}(id=${cuocThiId})}">Kết quả chi tiết</a>
+        <a class="btn btn-info mb-4" th:href="@{/PhieuKetQuas/thongke/cuocThiId/{id}(id=${cuocThiId})}">Thống kê chi tiết</a>
+
     </div>
     <table class="table table-striped table-hover">
         <thead>
