--- a/HeThongHoTroCuocThi/src/main/resources/templates/layout.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/layout.html
@@ -77,6 +77,11 @@
                             Cuộc thi
                         </a>
                     </li>
+                    <li class="nav-item" sec:authorize="hasAnyAuthority('USER', 'OIDC_USER')">
+                        <a class="nav-link" href="/User/edit">
+                            Thông tin
+                        </a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
                     <li sec:authorize="isAuthenticated()">
